Fix double scroll bar issue

--- a/app/pre-vue/pre-vue.scss
+++ b/app/pre-vue/pre-vue.scss
@@ -1,15 +1,14 @@
 /* Styles to load for the base index.html, before Vue is loaded */
 @use '@app/styles/gridspinner';
 
-body {
+html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
 }
 
 #prevue {
-    position: fixed;
-    top: 0px;
-    left: 0px;
     height: 100%;
     width: 100%;
 
@@ -17,6 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 
     background-color: var(--prevue-colors-background);
 
