--- a/app/styles/_gridspinner.scss
+++ b/app/styles/_gridspinner.scss
@@ -6,6 +6,7 @@
 
     display: flex;
     padding: 0;
+    margin: 0;
 
     flex-direction: row;
     flex-wrap: wrap;
